--- a/salesTraction/package.json
+++ b/salesTraction/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@react-spring/web": "^10.0.0",
+    "@types/i18next": "^12.1.0",
+    "@types/react-i18next": "^7.8.3",
+    "i18next": "^25.2.0",
+    "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
     "react-tinder-card": "^1.6.4",
     "tailwindcss": "3.0"
